# jaxsw

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  _setup.cfg  _toc.yml  genindex.html  intro.html  makefile  markdown-notebooks.html  markdown.html  myst.yml  notebooks.html  objects.inv  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.cfg  setup.py  sync_jz.sh
.github/workflows/: book.yaml  deploy.yml
_sources/: intro.md  markdown-notebooks.ipynb  notebooks.ipynb
_sources/content/: overview.md
_sources/content/12_steps/: 2.3_diffusion_2d.ipynb  2.4_burgers_2d.ipynb  elliptical.md  navierstokes.md  overview.md  problems_1d.md  problems_2d.md
_sources/content/geometry/: overview.md  staggering.ipynb
_sources/content/lorenz/: demo_lorenz63.ipynb  demo_lorenz96.ipynb  demo_lorenz96t.ipynb
_sources/content/qg/: multilayer_qg.ipynb  ssh_free_run.ipynb
_sources/content/sw/: sw.md  sw_linear.ipynb  sw_nonlinear.ipynb
content/: overview.html  overview.md
content/12_steps/: 1.1_linear_convection.html  1.2_diffusion_1d.html  1.3_burgers_1d.html  1.3_burgers_1d.ipynb  2.1_linear_convection_2d.html  2.2_nonlinear_convection_2d.html  2.2_nonlinear_convection_2d.ipynb  2.3_diffusion_2d.html  2.3_diffusion_2d.ipynb  2.4_burgers_2d.html  3.1_laplace.html  3.1_laplace.ipynb  3.2_poisson.html  3.2_poisson.ipynb  elliptical.html  navierstokes.html  overview.html  problems_1d.html  problems_2d.html
content/components/: anatomy_pde.md  boundaries.html  design.md  grid_operations.ipynb  overview.html  overview.md
content/geometry/: latlon_deltas.html  latlon_deltas.ipynb  overview.html  overview.md  staggering.html  staggering_old.html
content/getting_started/: demo_burgers.ipynb  demo_linear_swm.ipynb
content/lorenz/: demo_lorenz63.html  demo_lorenz96.html  demo_lorenz96.ipynb  demo_lorenz96t.html  overview.html
content/qg/: multilayer_qg.html  multilayer_qg.ipynb  multilayer_qg_revisited.ipynb  overview.html  qg.md  qg_formulation.md  qg_inversion.html  qg_inversion.ipynb  ssh_free_run.html  ssh_free_run.ipynb  weno_fluxes.ipynb
content/sw/: sw.html  sw.md  sw_formulation.md  sw_linear.html  sw_linear_api1.html  sw_linear_api1.ipynb  sw_linear_api2.html  sw_linear_api2.ipynb  sw_linear_jet_api1.ipynb  sw_linear_rossby_api1.ipynb  sw_nonlinear.html  sw_nonlinear.ipynb  sw_nonlinear_jet_api1.ipynb  sw_nonlinear_jet_api1_refactor.ipynb
environments/: jax_linux_cpu.yaml  jax_macos_cpu.yaml  requirements-dev.txt  requirements-exp.txt  requirements.txt
experiments/qg/ssh_propagation/: README.md  main.py  pde.py
experiments/qg/ssh_propagation/config/: main.yaml
jaxsw/: __init__.py
jaxsw/_src/boundaries/: functional.py  helmholtz.py  test_functional.py
jaxsw/_src/domain/: __init__.py  base.py  base_test.py  base_v2.py  latlon.py  mask.py  qg.py  test_base.py  time.py  utils.py
jaxsw/_src/fields/: __init__.py  base.py  base_test.py  continuous.py  finitediff.py  spectral.py  test_base.py  utils.py
jaxsw/_src/forcing/: wind.py
jaxsw/_src/masks/: __init__.py
jaxsw/_src/models/: base.py  lorenz63.py  lorenz96.py  lorenz96t.py  pde.py  qg_louis.py  qg_ml.py  qg_r.py
jaxsw/_src/models/advection/: initial.py
jaxsw/_src/models/qg/: __init__.py  qg.py  qg_f.py  qg_r.py
jaxsw/_src/models/sw/: __init__.py  linear.py  nonlinear.py  sw_nonlinear_d.py  sw_r.py  sw_simple_d.py
jaxsw/_src/models/tutorial/: burgers1d.py  (+1 more)
jaxsw/_src/operators/: constant.py  custom.py  difference.py  fd.py
jaxsw/_src/steppers/: rk3tv.py  utils.py
jaxsw/_src/utils/: __init__.py  constants.py  coriolis.py  dst_solver.py  linear_solver.py  pooling.py  spectral.py
jbook/: _config.yml  _toc.yml  intro.md  references.bib
jbook/content/: overview.md
jbook/content/12_steps/: 1.1_linear_convection.ipynb  1.2_diffusion_1d.ipynb  1.3_burgers_1d.ipynb  2.1_linear_convection_2d.ipynb  2.4_burgers_2d.ipynb  3.1_laplace.ipynb  3.2_poisson.ipynb  overview.md
jbook/content/components/: boundaries.ipynb
jbook/content/geometry/: staggering.ipynb
jbook/content/lorenz/: demo_lorenz63.ipynb  demo_lorenz96.ipynb  demo_lorenz96t.ipynb  overview.md
jbook/content/qg/: overview.md  qg_inversion.ipynb  ssh_free_run.ipynb
jbook/content/sw/: sw.md  sw_linear.ipynb
models/qg/: qg_naive_ssh.py
notebooks/: Burgers_TU.ipynb  demo.ipynb  demo_lorenz.ipynb  demo_lorenz63.ipynb  demo_lorenz96.ipynb  qg.ipynb
notebooks/dev/eman/: operators_spatial.ipynb  opt_params.ipynb  opt_state.ipynb  timestep_diffrax.ipynb  untitled.md
notebooks/dev/taks/: sw_nonlinear_api2.ipynb
scripts/: mqg_double_gyre.py  swe_linear.py  swe_nonlinear.py
(+118 files in other folders)
