[tool.poetry]
name = "jaxsw"
description = "Approximate Ocean Models with Jax"
authors = ["J. Emmanuel Johnson <jemanjohnson34@gmail.com>"]
version = "0.0.1"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jax = "^0.4.8"
jaxlib = "^0.4.7"
finitediffx = "^0.0.2"
equinox = "^0.10.2"
diffrax = "^0.3.1"
kernex = "^0.1.3"
einops = "^0.6.1"
numpy = "^1.24.3"
xarray = "^2023.4.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.1"
pytest-cov = ">=4.0.0"
pre-commit = ">=3.0.4"
black = "23.1.0"
isort = "5.12.0"
beartype = "^0.13.1"
ruff = "^0.0.263"

[tool.poetry.group.exp.dependencies]
wandb = "^0.15.0"
loguru = "^0.7.0"
hydra-core = "^1.3.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
netcdf4 = "^1.6.3"
autoroot = "^1.0.0"


[tool.poetry.group.jlab.dependencies]
ipykernel = "^6.22.0"
jupyterlab = "^3.6.3"


[tool.poetry.group.jbook.dependencies]
jupyter-book = "^0.15.1"
ghp-import = "^2.1.0"
sphinx-proof = "^0.1.3"
jupytext = "^1.14.5"

[tool.ruff]
select = ["E", "F", "I001"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true

[tool.ruff.isort]
combine-as-imports = true
lines-after-imports = 2
extra-standard-library = ["typing_extensions"]
order-by-type = false


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
