[tool.poetry]
name = "jaxsw"
description = "Approximate Ocean Models with Jax"
authors = ["J. Emmanuel Johnson <jemanjohnson34@gmail.com>"]
version = "0.0.1"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jejjohnson/jaxsw"
keywords = ["jax", "ocean", "lorenz", "shallow-water", "quasigeostrophic"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Operating System :: MACOS/Linux",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Development Status :: 2 - Pre-Alpha copy",

]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
jax = "^0.4.8"
jaxlib = "^0.4.7"
finitediffx = "^0.0.2"
equinox = "^0.10.2"
diffrax = "^0.3.1"
kernex = "^0.1.3"
einops = "^0.6.1"
numpy = "^1.24.3"
xarray = "^2023.4.2"
urllib3 = "1.26.15"
jaxtyping = "^0.2.0"
jaxopt = "^0.7"
lineax = "^0.0.1"
jaxdf = "^0.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pre-commit = "^3.3.2"
black = "^23.3.0"
isort = "^5.12.0"
beartype = "^0.14.0"
ruff = "^0.0.270"
nbqa = "^1.7.0"
intake-xarray = "^0.7.0"
numba = "^0.57.0"


[tool.poetry.group.exp.dependencies]
wandb = "^0.15.3"
loguru = "^0.7.0"
hydra-core = "^1.3.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
netcdf4 = "^1.6.3"
autoroot = "^1.0.0"
optax = "^0.1.5"
tqdm = "^4.65.0"

[tool.poetry.group.jlab.dependencies]
ipykernel = "^6.23.1"


[tool.poetry.group.jbook.dependencies]
jupyter-book = "^0.15.1"
ghp-import = "^2.1.0"
sphinx-proof = "^0.1.3"
jupytext = "^1.14.5"
myst-nb = "^0.17.2"

[tool.ruff]
select = ["E", "F", "I001"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true
src = ["jaxsw"]

[tool.ruff.isort]
combine-as-imports = true
lines-after-imports = 2
extra-standard-library = ["typing_extensions"]
order-by-type = false


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["jaxsw"]

[tool.nbqa.ignore]
ruff = ["I001", "F821", "F541"]

[tool.nbqa.exclude]
ruff = ["^notebooks/dev/", "^jbook/"]